# brave-core

./: .eslintrc.js  .gitignore  BUILD.gn  DEPS  Jenkinsfile  PRESUBMIT.py  brave_paks.gni  chromium_presubmit_config.json5  jest.config.js  package-lock.json  package.json  tsconfig.json
browser/: BUILD.gn  about_flags.cc  brave_app_controller_mac.mm  brave_app_controller_mac_browsertest.mm  brave_browser_main_parts.cc  brave_browser_main_parts.h  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_browser_resources.grd  brave_content_browser_client.cc  brave_content_browser_client.h  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_shell_integration.cc  brave_shell_integration_mac.h  brave_shell_integration_mac.mm  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/ai_chat/: BUILD.gn  ai_chat_service_factory.cc  ai_chat_service_factory.h  ai_chat_settings_helper.cc  ai_chat_settings_helper.h  ai_chat_ui_browsertest.cc
browser/autoplay/: BUILD.gn  autoplay_permission_context_unittest.cc
browser/background/: brave_background_mode_manager.cc  brave_background_mode_manager.h
browser/binance/: binance_protocol_handler.cc
browser/brave_ads/: BUILD.gn  ads_service_factory.cc  ads_tab_helper.cc  sources.gni
browser/brave_news/: BUILD.gn  brave_news_controller_factory.cc  brave_news_controller_factory.h
browser/brave_rewards/: BUILD.gn  rewards_service_factory.cc  rewards_tab_helper.cc  rewards_tab_helper.h  sources.gni
browser/brave_shields/: ad_block_service_browsertest.cc  ad_block_service_browsertest.h  brave_shields_web_contents_observer.cc  domain_block_page_browsertest.cc  https_everywhere_component_installer.cc  https_everywhere_component_installer.h  https_upgrade_browsertest.cc
browser/brave_vpn/: brave_vpn_service_factory.cc  brave_vpn_service_factory.h  sources.gni
browser/brave_wallet/: BUILD.gn  brave_wallet_provider_delegate_impl.cc  brave_wallet_provider_impl_unittest.cc  brave_wallet_service_delegate_impl.cc  brave_wallet_service_unittest.cc  brave_wallet_tab_helper.cc  brave_wallet_tab_helper.h  ethereum_provider_impl_unittest.cc  keyring_service_unittest.cc  solana_provider_browsertest.cc  solana_provider_impl_unittest.cc  solana_provider_renderer_browsertest.cc
browser/browsing_data/: brave_browsing_data_remover_delegate.cc
browser/component_updater/: BUILD.gn  sources.gni
browser/crypto_dot_com/: sources.gni
browser/ephemeral_storage/: ephemeral_storage_browsertest.cc  tld_ephemeral_lifetime.cc
browser/ethereum_remote_client/: BUILD.gn  ethereum_remote_client_constants.h  ethereum_remote_client_delegate_impl.h  ethereum_remote_client_service.cc  ethereum_remote_client_service.h  ethereum_remote_client_service_factory.cc  ethereum_remote_client_service_factory.h  pref_names.cc  pref_names.h
browser/extensions/: BUILD.gn  brave_component_loader.cc  brave_extension_management.cc  brave_extensions_browser_client.cc  brave_extensions_browser_client.h  brave_extensions_browser_client_impl.cc  brave_extensions_browser_client_impl.h  brave_tor_client_updater.h  brave_user_script_listener.cc  brave_user_script_listener.h  brave_wallet_navigation_throttle_unittest.cc  sources.gni
browser/farbling/: BUILD.gn
browser/gcm_driver/: BUILD.gn  sources.gni
browser/infobars/: BUILD.gn  creative_search_result_ad_infobar_delegate.cc  creative_search_result_ad_infobar_delegate.h  crypto_wallets_infobar_delegate.cc  crypto_wallets_infobar_delegate.h  sources.gni
browser/ipfs/: BUILD.gn  ipfs_tab_helper.cc  ipfs_tab_helper_browsertest.cc  sources.gni
browser/misc_metrics/: sources.gni
browser/net/: brave_ad_block_tp_network_delegate_helper.cc  brave_ad_block_tp_network_delegate_helper_unittest.cc  brave_common_static_redirect_network_delegate_helper.cc  brave_httpse_network_delegate_helper.cc  brave_network_audit_allowed_lists.h  sources.gni  url_context.h
browser/ntp_background_images/: BUILD.gn  sources.gni  view_counter_service_factory.cc
browser/permissions/: BUILD.gn  brave_ethereum_permission_context_browsertest.cc  permission_manager_browsertest.cc
browser/playlist/: playlist_service_factory.cc
browser/profiles/: BUILD.gn  brave_profile.cc  brave_profile.h  brave_profile_impl.cc  brave_profile_impl.h  brave_profile_manager.cc  brave_profile_manager.h  brave_profile_manager_browsertest.cc  brave_profile_manager_unittest.cc  brave_renderer_updater.cc  brave_session_profile.cc  brave_session_profile.h  profile_util.cc  profile_util.h  sources.gni
browser/psst/: psst_consent_tab_helper_delegate_impl.cc  psst_consent_tab_helper_delegate_impl.h  psst_tab_helper_browsertest.cc  sources.gni
browser/resources/: brave_optimize_webui_config.py  resource_ids
browser/search/: BUILD.gn  sources.gni
browser/search_engines/: search_engine_provider_service_browsertest.cc  search_engine_tracker.h  search_engine_tracker_browsertest.cc  sources.gni
browser/skus/: BUILD.gn  sdk_controller_factory.cc  sdk_controller_factory.h  sdk_provider_impl.cc  sdk_provider_impl.h
browser/speedreader/: BUILD.gn  speedreader_browsertest.cc  speedreader_tab_helper.cc  speedreader_tab_helper.h
browser/themes/: theme_properties.cc
browser/tor/: BUILD.gn  onion_location_navigation_throttle_browsertest.cc  tor_navigation_throttle_unittest.cc  tor_profile_manager.cc  tor_profile_service_impl.cc  tor_profile_service_impl.h
browser/ui/: BUILD.gn  brave_browser_actions.cc  brave_browser_command_controller.cc  brave_browser_command_controller.h  brave_browser_command_controller_browsertest.cc  brave_browser_commands.cc  brave_browser_commands.h  brave_browser_window.h  brave_shields_data_controller.cc  browser_commands.cc  browser_commands.h  browser_element_identifiers.cc  browser_element_identifiers.h  sources.gni
browser/widevine/: BUILD.gn
components/futures/: BUILD.gn  future.cc  future.h  future_join.h  future_join_unittest.cc  future_unittest.cc
components/leaked_credentials/: BUILD.gn  DEPS  leaked_credentials_api.cc  leaked_credentials_api.h  (+4 more)
(+2500 files in other folders)
