import("//brave/build/config.gni")
import("//brave/components/brave_wallet/browser/config.gni")
import("//build/config/features.gni")
import("//extensions/buildflags/buildflags.gni")

assert(brave_wallet_enabled)

source_set("browser") {
  configs += [ ":infura_config" ]
  include_dirs = [ "//brave/third_party/ethash/src/include" ]

  sources = [
    "ethereum_remote_client_constants.cc",
    "ethereum_remote_client_constants.h",
    "ethereum_remote_client_delegate.h",
    "ethereum_remote_client_service.cc",
    "ethereum_remote_client_service.h",
    "pref_names.cc",
    "pref_names.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_wallet/browser",
    "//components/content_settings/core/browser",
    "//components/keyed_service/core",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
    "//crypto",
    "//extensions/buildflags",
    "//services/network/public/cpp",
    "//url",
  ]

  if (enable_extensions) {
    deps += [ "//extensions/browser" ]
  }
}

config("infura_config") {
  defines = [ "BRAVE_INFURA_PROJECT_ID=\"$brave_infura_project_id\"" ]
}
