import("//brave/components/brave_rewards/browser/buildflags/buildflags.gni")
import("//brave/components/brave_wallet/browser/config.gni")
import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")
import("//build/config/features.gni")

group("resources") {
  deps = [
    "//brave/components/brave_extension:generated_resources",
    "//brave/components/brave_extension:static_resources",
  ]
  if (brave_rewards_enabled) {
    deps += [
      "//brave/components/brave_rewards/resources/extension:extension_generated_resources",
      "//brave/components/brave_rewards/resources/extension:static_resources",
    ]
  }
  if (enable_brave_webtorrent) {
    deps += [
      "//brave/components/brave_webtorrent:generated_resources",
      "//brave/components/brave_webtorrent:static_resources",
    ]
  }
}

config("brave_services_config") {
  defines = [ "BRAVE_SERVICES_KEY=\"$brave_services_key\"" ]
}

config("infura_config") {
  defines = [ "BRAVE_INFURA_PROJECT_ID=\"$brave_infura_project_id\"" ]
}
