import("//components/gcm_driver/config.gni")

brave_browser_gcm_driver_sources = []
brave_browser_gcm_driver_deps = []

if (!use_gcm_from_platform) {
  brave_browser_gcm_driver_sources += [
    "brave_gcm_channel_status.cc",
    "brave_gcm_channel_status.h",
    "brave_gcm_utils.cc",
    "brave_gcm_utils.h",
  ]

  brave_browser_gcm_driver_deps += [
    "//base",
    "//brave/common:pref_names",
    "//components/prefs",
    "//components/pref_registry",
    # For profile.h
    "//content/public/browser",
    "//chrome/browser/profiles:profile",
    "//components/gcm_driver",
  ]
}
