source_set("profiles") {
  sources = [
    "brave_profile.cc",
    "brave_profile.h",
    "brave_profile_manager.cc",
    "brave_profile_manager.h",
    "brave_session_profile.cc",
    "brave_session_profile.h",
  ]

  deps = [
    "//base",
    "//chrome/browser",
    "//chrome/common",
    "//content/public/common",
    "//brave/browser/extensions",
    "//brave/browser/tor",
    "//brave/content:browser",
    "//brave/common/tor",
    "//brave/components/brave_ads/browser",
    "//brave/components/brave_sync",
    "//brave/components/brave_rewards/browser",
    "//ui/base",
  ]
}
