source_set("profiles") {
  sources = [
    "brave_profile.cc",
    "brave_profile.h",
    "brave_profile_manager.cc",
    "brave_profile_manager.h",
    "brave_session_profile.cc",
    "brave_session_profile.h",
  ]

  deps = [
    "//base",
    "//chrome/browser",
    "//chrome/common",
    "//ui/base",
  ]
}
